# sip-control-flow-integrity

./: .gitignore  CMakeLists.txt  memoryTrace.c  memoryTrace3.c  run-cfi.sh  something.c  something_loop.c
attack/: modifyGraph.sh  patchStackVerif.py
buildtools/: compile.sh  memoryCheck.sh  patchChecksum.py  protectionTimeEval.sh  sizeTimeEval.sh
control-flow-integrity/: CFIAnalysis.cpp  CFIAnalysis.h  CMakeLists.txt  FunctionPass.cpp  FunctionPass.h  Graph.cpp  Graph.h  GraphWriter.cpp  GraphWriter.h  StackAnalysis.c  StackAnalysis.cpp  compile.sh
control-flow-integrity/graph/: CMakeLists.txt  Edge.cpp  Edge.h  Graph.cpp  Graph.h  Vertex.cpp  Vertex.h
control-flow-integrity/stack_analysis/: CMakeLists.txt  StackAnalysis.c  StackAnalysis.cpp  StackAnalysis.h  StackAnalysis.hpp
examples/: CMakeLists.txt  cfi.h  memoryTrace.c  memoryTrace3.c  something.c  something.cpp  something_loop.c
include/control-flow-integrity/: CFIAnalysis.h  GraphWriter.h
include/control-flow-integrity/graph/: Edge.h  Graph.h  Vertex.h
src/control-flow-integrity/: CFIAnalysis.cpp  GraphWriter.cpp
src/control-flow-integrity/graph/: Edge.cpp  Graph.cpp  Vertex.cpp
stack_analysis/: CMakeLists.txt  StackAnalysis.c
